# os-socket-chat

./: CMakeLists.txt  README.md
inc/: client_list.h  log.h  main.h
src/: client.c  client_list.c  log.c  server.c
